kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lha-service
  labels:
    app: frontend-lha
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend-lha
