kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-lha-ingress
  labels:
    app: frontend-lha
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend-lha.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-lha-service
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-lha-service
                port:
                  number: 80
